# cortdex-app

./: .gitignore  BUILD.md  CHECK.md  NOTES.md  README.md  analysis_options.yaml  build.yaml  flake.nix  flutter_rust_bridge.yaml  justfile  l10n.yaml  pubspec.yaml
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/guiemrabassa/magrathea/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb
lib/src/dart/: client.dart
lib/src/dart/camera/: hook.dart  test.dart
lib/src/dart/client/: client.dart  client.g.dart
lib/src/dart/error/: error_handler.dart
lib/src/dart/helpers/: async_snapshot.dart  context.dart  debug.dart  files.dart  json.dart  platform.dart
lib/src/dart/notifications/: android.dart  apple.dart  ios.dart  linux.dart  macos.dart  notifications.dart  windows.dart
lib/src/dart/routes/: routes.dart  routes.g.dart
lib/src/dart/server/: server.dart  server.g.dart
lib/src/dart/settings/: client.dart  localization.dart  localization.g.dart  model.dart  note.dart  settings.dart
lib/src/dart/ui/: cortdex_widget.dart  field.dart  home.dart
lib/src/dart/ui/attributes/: attribute_list.dart  attribute_value.dart
lib/src/dart/ui/components/: list.dart  text.dart  tiles.dart  toggleable.dart
lib/src/dart/ui/editor/: custom_blocks.dart  note_editor.dart  save_button.dart  toolbar.dart
lib/src/dart/ui/menu/floating/: floating_item.dart  floating_menu.dart
lib/src/dart/ui/note/: input_chip_test.dart  note_menu.dart  note_tile.dart  pinned.dart  utils.dart
lib/src/dart/ui/omni_button/: omni_action.dart  omni_button.dart  omni_button_provider.dart  omni_button_provider.g.dart
lib/src/dart/ui/search/: search.dart  search_field.dart
lib/src/dart/ui/settings/: client_settings.dart  model.dart  note_settings.dart  settings.dart
lib/src/dart/windowing/: windows.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: .gitignore
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/db/: Cargo.toml
rust/db/sentences/: all.surql
rust/db/src/: connection.rs  lib.rs
rust/db/src/api/: error.rs  mod.rs
rust/db/src/api/git/: mod.rs
rust/db/src/internal/: attribute.rs  mod.rs  note.rs
rust/editor/: Cargo.toml
rust/editor/src/: lib.rs
rust/into_request/into_request/: Cargo.toml
rust/into_request/into_request/src/: lib.rs
rust/into_request/into_request_derive/: Cargo.toml
rust/into_request/into_request_derive/src/: lib.rs
rust/ml/: Cargo.toml
rust/ml/src/: embedder.rs  error.rs  lib.rs  manager.rs  model.rs
rust/ml/src/api/: manager.rs  mod.rs
rust/rust_lib_cortdex.xcodeproj/: project.pbxproj
rust/rust_lib_cortdex.xcodeproj/project.xcworkspace/xcuserdata/guiem.xcuserdatad/: UserInterfaceState.xcuserstate
rust/rust_lib_cortdex.xcodeproj/xcuserdata/guiem.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: error.rs  mod.rs  note.rs
rust/src/inner/: core.rs  logger.rs  mod.rs  stream.rs  websockets.rs
rust/src/inner/client/: mod.rs
rust/src/inner/command/: attribute.rs  mod.rs  note.rs
rust/src/inner/server/: auth.rs  mod.rs
rust/test/: Cargo.toml
rust/test/cortdex_test.xcodeproj/: project.pbxproj
rust/test/src/: fs.rs  main.rs
rust/types/: Cargo.toml
rust/types/src/: embedding.rs  lib.rs  test_utils.rs
rust/types/src/api/: attribute.rs  markdown.rs  mod.rs  note.rs
rust/types/src/utils/: error.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_cortdex.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_cortdex.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
